<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/seconds_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_seconds_count"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_timer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/set_timer"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_number_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/send_number"
        android:textAllCaps="true"
        android:textStyle="bold" />

</LinearLayout>